assets/css/style.css
/* ... */
/* add side padding back for other elements in this section, so they match with the rest of the site */

#about > h2, #about > h3, #about >p {
  padding-left: 10%;
  padding-right: 10%;
}

#about > h2 {
  margin-bottom: 2%;
}

/* credentials image - defined for big screens here */

#why-me {
  height: 720px;
  width: 100%;
  background: url("../images/why-me-img.webp") no-repeat  center/cover;
  /* with narrow screen sizes, then image should shrink to show the client */
  background-position: 35%;
  position:relative;
  display: flex;
  justify-content: flex-end;
}

/* Credentials image text: appears on the right-hand side for big screens*/
#why-me-text {
  background-color:  var(--light);
  color: var(--dark);
  font-size: 120%;
  max-width: 40%;
  padding: 2rem;
  opacity: 0.8;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/* credential cards */

/* card arrangement modeled after the Love Running project */

/* the div containing all cards */
#cred-container {
  margin-left: 10%;
  margin-right: 10%;
  display: flex;
  flex-wrap:wrap;
}

/* divs for individual cards */
.cred {
  flex-basis:200px;
  flex-grow: 1;
  padding: 10px;
  margin: 2px;
  height: 200px;
  text-align: center;
  /* flex needed for putting `cred-tap`/`cred-hover` at the bottom of the box */
  display: flex;
  flex-direction: column;
  background-color: var(--dark);
  color: var(--white);
}

/* credential cards only display institution & position by default; reveal more information on tap/hover */

/* change colors and add border on tap/hover */
.cred:active,
.cred:hover {
  color: var(--dark);
  background-color: var(--white);
  border: solid 2px var(--dark);
}

/* instruction to tap/hover on the front of the card */
.cred-tap,
.cred-hover {
  font-size: 80%;
  color: var(--light);
  /* push it to the bottom of the parent box */
  margin-top: auto;
  margin-bottom: 0px;
}

/* this is not displayed by default, only on larger screened devices where hover is possible */
.cred-hover {
  display: none;
}

/* hide institution, position, and advice to tap/hover on tap or hover */
.cred:active > h4,
.cred:hover > h4,
.cred:active > .cred-tap,
.cred:active > .cred-hover,
.cred:hover > .cred-tap,
.cred:hover > .cred-hover {
  display: none;
}

/* the div containing more information on each position.
this is not displayed by default */
.cred-content {
  display: none;
  margin: auto 0;
}

/* display the `div` containing more information when parent `div` tapped/hovered over */
.cred:active > .cred-content,
.cred:hover > .cred-content {
  display: block;
}

/* inline links within the content on the flip side of the cards*/

.cred-content a {
  color:inherit;
  font-weight: bold;
}

/* the title of the leadership position held by the client */
.pos {
  font-size: 120%;
  margin-bottom: 1rem;
  margin-top: 2rem;
  color: var(--light);
}

/* YouTube video */
#video {
  height: 250px;
  display: flex;
  justify-content: center;
  padding: 0 10%;
  margin-top: 1vh;
}

#video iframe {
  width: 100%;
  height: 250px;
}

/* contact section */

/* color scheme for section */
#contact {
  color:  var(--light);
  background-color: var(--dark);
}

/* container for the Calendly widget */
.calendly-container {
  width: 100%;
}

/* formatting for the Calendly widget */
.calendly-inline-widget {
  min-width:320px;
  height:700px;
  margin-top: 4rem;
}

/* Footer */

/* color and padding */
footer {
  background-color: var(--gray);
  padding: 0;
}

footer * {
  /* link elements in the footer should not be blue/purple */
  color: var(--light);
  font-size: 120%;
}

/* footer links should not have bullets, should be displayed side by side */
footer ul {
  list-style-type: none;
  display: flex;
  justify-content: space-between;
  padding: 3% 10%;
}

/* copyright */

/* colors and arrangement */
#copyright{
  background-color: var(--dark-gray);
  margin: 0;
  padding: 1%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* copyright elements: colors and arrangement */
#copyright * {
  margin: 0 auto;
  color: var(--white);
  font-size: small;
}


/* media query: devices with good pointer capabilities (mouse, trackpad) */
@media screen and (pointer: fine) {

  /*  links should change color and be underlined when hovered over */
  a:hover { /* underline: footer icons included*/
    text-decoration: underline;
  }

  a:hover,
  a:hover i { /* color change: footer icons not included*/
    color: var(--white);
  }

  #solutions a:hover {
    color: var(--white);
    font-weight: bold;
  }

  .cred-content a:hover {
    color: var(--light);
  }

  /* About section */

  /* credential cards should have instructions to "hover" instead of "tap" */

  .cred-hover {
    display: block;
  }

  .cred-tap {
    display: none;
  }
}

/* media query: very narrow phones */
@media screen and (max-width: 300px) {

  /* hearder */
  /* nav bar */
  /* logo link box should not extend too much to the right, it gets too close to the nav bar toggle to comfortably tap on mobile */
  #logo-link {
    max-width: 75%;
  }

  /* Main content */
  #hero-text {
    height: 12rem;
  }

  /* Problems & Solutions section: resize boxes */
  #millions .color-cover {
    height: 70vh;
  }

  #frustrated .color-cover {
    height: 120vh;
  }

  #learn-list .color-cover {
    height: 170vh;
  }

  #success .color-cover {
    height: 90vh;
  }

}

/* media query: phones */
@media screen and (max-width: 480px) {

  /* About section: text should appear at the bottom of the image */
  #why-me {
    flex-direction: column;
  }
  #why-me-text {
    max-width: 100%;
  }
}
/* ... */

